Add ability for Training to pull data from S3 Integration
Training needs to be able to sync it's data with integration
daily.

--- a/hieradata_aws/class/training/db_admin.yaml
+++ b/hieradata_aws/class/training/db_admin.yaml
@@ -1,7 +1,18 @@
 govuk_env_sync::tasks:
-  "pull_content_data_admin_integration_daily":
+  "pull_ckan_training_daily":
     ensure: "present"
-    hour: "0"
+    hour: "3"
+    minute: "15"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "ckan_production"
+    temppath: "/tmp/ckan_production_pull"
+    url: "govuk-integration-database-backups"
+    path: "postgresql-backend"
+  "pull_content_data_admin_training_daily":
+    ensure: "present"
+    hour: "2"
     minute: "18"
     action: "pull"
     dbms: "postgresql"
@@ -10,14 +21,25 @@ govuk_env_sync::tasks:
     temppath: "/tmp/content_data_admin_integration_pull"
     url: "govuk-integration-database-backups"
     path: "postgresql-backend"
-  "push_content_data_admin_integration_daily":
+  "pull_local-links-manager_training_daily":
     ensure: "present"
-    hour: "1"
-    minute: "18"
-    action: "push"
+    hour: "4"
+    minute: "15"
+    action: "pull"
     dbms: "postgresql"
     storagebackend: "s3"
-    database: "content_data_admin_production"
-    temppath: "/tmp/content_data_admin_integration_push"
-    url: "govuk-training-database-backups"
+    database: "local-links-manager_production"
+    temppath: "/tmp/local-links-manager_integration"
+    url: "govuk-production-database-backups"
+    path: "postgresql-backend"
+  "pull_support_contacts_training_daily":
+    ensure: "present"
+    hour: "3"
+    minute: "30"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "support_contacts_production"
+    temppath: "/tmp/support_contacts_production"
+    url: "govuk-integration-database-backups"
     path: "postgresql-backend"
