--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -1138,6 +1138,8 @@ monitoring::checks::cache::servers:
   - 'backend-redis-002'
 
 monitoring::checks::rds::servers:
+   - 'content-data-api-postgresql-primary'
+   - 'content-data-api-postgresql-standby'
    - 'postgresql-primary'
    - 'postgresql-standby'
    - 'transition-postgresql-primary'
