Make ES data sync logic ES6 friendly

--- a/hieradata_aws/class/production/search.yaml
+++ b/hieradata_aws/class/production/search.yaml
@@ -4,10 +4,10 @@ govuk_env_sync::tasks:
     hour: "0"
     minute: "20"
     action: "push"
-    dbms: "elasticsearch5"
-    storagebackend: "es_snapshot"
-    database: "everything"
-    temppath: "/tmp/es_snapshot_everything"
+    dbms: "elasticsearch"
+    storagebackend: "elasticsearch"
+    database: "elasticsearch5"
+    temppath: "/tmp/elasticsearch_everything"
     url: "govuk-production"
     path: "elasticsearch5"
 
