--- a/hieradata_aws/class/training/search.yaml
+++ b/hieradata_aws/class/training/search.yaml
@@ -7,10 +7,10 @@ govuk_env_sync::tasks:
     hour: "3"
     minute: "24"
     action: "pull"
-    dbms: "elasticsearch5"
-    storagebackend: "es_snapshot"
-    database: "everything"
-    temppath: "/tmp/es_snapshot_everything"
+    dbms: "elasticsearch"
+    storagebackend: "elasticsearch"
+    database: "elasticsearch5"
+    temppath: "/tmp/elasticsearch_everything"
     url: "govuk-integration"
     path: "elasticsearch5"
 
