--- a/hieradata_aws/class/integration/search.yaml
+++ b/hieradata_aws/class/integration/search.yaml
@@ -4,10 +4,10 @@ govuk_env_sync::tasks:
     hour: "3"
     minute: "24"
     action: "pull"
-    dbms: "elasticsearch5"
-    storagebackend: "es_snapshot"
-    database: "everything"
-    temppath: "/tmp/es_snapshot_everything"
+    dbms: "elasticsearch"
+    storagebackend: "elasticsearch"
+    database: "elasticsearch5"
+    temppath: "/tmp/elasticsearch_everything"
     url: "govuk-staging"
     path: "elasticsearch5"
   "push_es_everything_daily":
@@ -15,10 +15,10 @@ govuk_env_sync::tasks:
     hour: "4"
     minute: "24"
     action: "push"
-    dbms: "elasticsearch5"
-    storagebackend: "es_snapshot"
-    database: "everything"
-    temppath: "/tmp/es_snapshot_everything"
+    dbms: "elasticsearch"
+    storagebackend: "elasticsearch"
+    database: "elasticsearch5"
+    temppath: "/tmp/elasticsearch_everything"
     url: "govuk-integration"
     path: "elasticsearch5"
 
