--- a/hieradata_aws/class/staging/search.yaml
+++ b/hieradata_aws/class/staging/search.yaml
@@ -7,10 +7,10 @@ govuk_env_sync::tasks:
     hour: "1"
     minute: "24"
     action: "pull"
-    dbms: "elasticsearch5"
-    storagebackend: "es_snapshot"
-    database: "everything"
-    temppath: "/tmp/es_snapshot_everything"
+    dbms: "elasticsearch"
+    storagebackend: "elasticsearch"
+    database: "elasticsearch5"
+    temppath: "/tmp/elasticsearch_everything"
     url: "govuk-production"
     path: "elasticsearch5"
   "push_es_everything_daily":
@@ -18,10 +18,10 @@ govuk_env_sync::tasks:
     hour: "2"
     minute: "24"
     action: "push"
-    dbms: "elasticsearch5"
-    storagebackend: "es_snapshot"
-    database: "everything"
-    temppath: "/tmp/es_snapshot_everything"
+    dbms: "elasticsearch"
+    storagebackend: "elasticsearch"
+    database: "elasticsearch5"
+    temppath: "/tmp/elasticsearch_everything"
     url: "govuk-staging"
     path: "elasticsearch5"
 
