Use 'su' instead of 'sudo -u' for smokey-loop

--- a/modules/monitoring/templates/smokey-loop.conf
+++ b/modules/monitoring/templates/smokey-loop.conf
@@ -9,7 +9,7 @@ respawn limit unlimited
 
 kill timeout 240
 
-exec sudo -u smokey /opt/smokey/tests_json_output.sh /tmp/smokey.json.tmp <%= @environment %>
+exec su smokey -c '/opt/smokey/tests_json_output.sh /tmp/smokey.json.tmp <%= @environment %>'
 
 post-stop script
     mv /tmp/smokey.json.tmp /tmp/smokey.json
