--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -607,6 +607,7 @@ govuk::apps::release::db_username: "release"
 govuk::apps::release::db_password: "%{hiera('govuk::apps::release::db::mysql_release')}"
 govuk::apps::release::github_username: "govuk-ci"
 
+govuk::apps::search_api::elasticsearch_b_uri: 'http://elasticsearch6'
 govuk::apps::search_api::nagios_memory_warning: 4600
 govuk::apps::search_api::nagios_memory_critical: 4900
 govuk::apps::search_api::enable_bulk_reindex_listener: true
