Add jobs for production -> staging ES6 data sync

--- a/hieradata_aws/class/production/search.yaml
+++ b/hieradata_aws/class/production/search.yaml
@@ -10,8 +10,20 @@ govuk_env_sync::tasks:
     temppath: "/tmp/elasticsearch_everything"
     url: "govuk-production"
     path: "elasticsearch5"
+  "push_es6_daily":
+    ensure: "present"
+    hour: "0"
+    minute: "20"
+    action: "push"
+    dbms: "elasticsearch"
+    storagebackend: "elasticsearch"
+    database: "elasticsearch6"
+    temppath: "/tmp/elasticsearch_everything"
+    url: "govuk-production"
+    path: "elasticsearch6"
 
 logrotate::conf::days_to_keep: 7
 nginx::logging::days_to_keep: 7
 
 govuk_search::prune::es_repo: "govuk-production"
+govuk_search::prune::es6_address: "elasticsearch6:80"
