--- a/hieradata_aws/class/staging/search.yaml
+++ b/hieradata_aws/class/staging/search.yaml
@@ -24,6 +24,17 @@ govuk_env_sync::tasks:
     temppath: "/tmp/elasticsearch_everything"
     url: "govuk-staging"
     path: "elasticsearch5"
+  "pull_es6_daily":
+    ensure: "present"
+    hour: "1"
+    minute: "24"
+    action: "pull"
+    dbms: "elasticsearch"
+    storagebackend: "elasticsearch"
+    database: "elasticsearch6"
+    temppath: "/tmp/elasticsearch_everything"
+    url: "govuk-production"
+    path: "elasticsearch6"
   "push_es6_daily":
     ensure: "present"
     hour: "2"
