Run caching checks during smoke tests
This will run https://github.com/alphagov/smokey/pull/552
during the smoke tests.

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -1514,6 +1514,8 @@ monitoring::contacts::slack_icinga_extinfo_cgi_url: "https://alert.%{hiera('app_
 monitoring::checks::smokey::features:
   check_bouncer:
     feature: bouncer
+  check_cache:
+    feature: caching
   check_calendars:
     feature: calendars
   check_contacts:
