--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -1103,6 +1103,8 @@ monitoring::contacts::slack_icinga_extinfo_cgi_url: "https://alert.%{::aws_envir
 monitoring::checks::smokey::features:
   check_bouncer:
     feature: bouncer
+  check_cache:
+    feature: caching
   check_calendars:
     feature: calendars
   check_contacts:
