--- a/hieradata/class/production/jenkins.yaml
+++ b/hieradata/class/production/jenkins.yaml
@@ -5,6 +5,7 @@ govuk_jenkins::job_builder::jobs:
   - govuk_jenkins::jobs::bouncer_cdn_redirect
   - govuk_jenkins::jobs::build_offsite_backup
   - govuk_jenkins::jobs::check_cdn_ip_ranges
+  - govuk_jenkins::jobs::check_github_ip_ranges
   - govuk_jenkins::jobs::check_pingdom_ip_ranges
   - govuk_jenkins::jobs::check_sentry_errors
   - govuk_jenkins::jobs::content_audit_tool
