Add Databases to Datasync from Integration to Training
We need to sync these databases for the Training environment
to function correctly.

--- a/hieradata_aws/class/integration/db_admin.yaml
+++ b/hieradata_aws/class/integration/db_admin.yaml
@@ -1,5 +1,5 @@
 govuk_env_sync::tasks:
-  "pull_content_data_admin_production_daily":
+  "pull_content_data_admin_integration_daily":
     ensure: "present"
     hour: "4"
     minute: "18"
@@ -45,8 +45,8 @@ govuk_env_sync::tasks:
     path: "postgresql-backend"
   "push_link-checker-api_integration_daily":
     ensure: "present"
-    hour: "3"
-    minute: "0"
+    hour: "23"
+    minute: "45"
     action: "push"
     dbms: "postgresql"
     storagebackend: "s3"
@@ -56,12 +56,199 @@ govuk_env_sync::tasks:
     path: "postgresql-backend"
   "push_support-contacts_integration_daily":
     ensure: "present"
+    hour: "1"
+    minute: "15"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "support_contacts_production"
+    temppath: "/tmp/support-contacts_integration_daily"
+    url: "govuk-integration-database-backups"
+    path: "postgresql-backend"
+  "push_content-register_production_integration_daily":
+    ensure: "present"
+    hour: "1"
+    minute: "45"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "content-register_production"
+    temppath: "/tmp/content-register_production"
+    url: "govuk-integration-database-backups"
+    path: "postgresql-backend"
+  "push_content_audit_tool_production_integration_daily":
+    ensure: "present"
+    hour: "1"
+    minute: "30"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "content_audit_tool_production"
+    temppath: "/tmp/content_audit_tool_production"
+    url: "govuk-integration-database-backups"
+    path: "postgresql-backend"
+  "push_content_publisher_production_integration_daily":
+    ensure: "present"
+    hour: "23"
+    minute: "15"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "content_publisher_production"
+    temppath: "/tmp/content_publisher_production"
+    url: "govuk-integration-database-backups"
+    path: "postgresql-backend"
+  "push_content_tagger_production_integration_daily":
+    ensure: "present"
+    hour: "3"
+    minute: "30"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "content_tagger_production"
+    temppath: "/tmp/content_tagger_production"
+    url: "govuk-integration-database-backups"
+    path: "postgresql-backend"
+  "push_email_alert_api_integration_daily":
+    ensure: "present"
+    hour: "1"
+    minute: "20"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "email-alert-api_production"
+    temppath: "/tmp/email-alert-api_production"
+    url: "govuk-integration-database-backups"
+    path: "postgresql-backend"
+  "push_email_alert_monitor_integration_daily":
+    ensure: "present"
+    hour: "1"
+    minute: "10"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "email-alert-monitor_production"
+    temppath: "/tmp/email-alert-monitor_production"
+    url: "govuk-integration-database-backups"
+    path: "postgresql-backend"
+  "push_organisations_publisher_integration_daily":
+    ensure: "present"
+    hour: "1"
+    minute: "10"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "organisations-publisher_production"
+    temppath: "/tmp/organisations-publisher_production"
+    url: "govuk-integration-database-backups"
+    path: "postgresql-backend"
+  "push_publishing_api_integration_daily":
+    ensure: "present"
+    hour: "2"
+    minute: "40"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "publishing_api_production"
+    temppath: "/tmp/publishing_api_production"
+    url: "govuk-integration-database-backups"
+    path: "postgresql-backend"
+  "push_service_manual_publisher_integration_daily":
+    ensure: "present"
+    hour: "2"
+    minute: "35"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "service-manual-publisher_production"
+    temppath: "/tmp/service-manual-publisher_production"
+    url: "govuk-integration-database-backups"
+    path: "postgresql-backend"
+  "push_support_contacts_integration_daily":
+    ensure: "present"
     hour: "2"
     minute: "30"
     action: "push"
     dbms: "postgresql"
     storagebackend: "s3"
     database: "support_contacts_production"
-    temppath: "/tmp/"
+    temppath: "/tmp/support_contacts_production"
     url: "govuk-integration-database-backups"
     path: "postgresql-backend"
+  "push_collections_publisher_integration_daily":
+    ensure: "present"
+    hour: "4"
+    minute: "30"
+    action: "push"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "collections_publisher_production"
+    temppath: "/tmp/collections_publisher_production"
+    url: "govuk-integration-database-backups"
+    path: "mysql-backend"
+  "push_contacts_integration_daily":
+    ensure: "present"
+    hour: "2"
+    minute: "30"
+    action: "push"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "contacts_production"
+    temppath: "/tmp/contacts_production"
+    url: "govuk-integration-database-backups"
+    path: "mysql-backend"
+  "push_performance_schema_integration_daily":
+    ensure: "present"
+    hour: "0"
+    minute: "30"
+    action: "push"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "performance_schema"
+    temppath: "/tmp/performance_schema"
+    url: "govuk-integration-database-backups"
+    path: "mysql-backend"
+  "push_release_integration_daily":
+    ensure: "present"
+    hour: "1"
+    minute: "15"
+    action: "push"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "release_production"
+    temppath: "/tmp/release_production"
+    url: "govuk-integration-database-backups"
+    path: "mysql-backend"
+  "push_search_admin_integration_daily":
+    ensure: "present"
+    hour: "0"
+    minute: "45"
+    action: "push"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "search_admin_production"
+    temppath: "/tmp/search_admin_production"
+    url: "govuk-integration-database-backups"
+    path: "mysql-backend"
+  "push_signon_integration_daily":
+    ensure: "present"
+    hour: "1"
+    minute: "15"
+    action: "push"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "search_admin_production"
+    temppath: "/tmp/signon_production"
+    url: "govuk-integration-database-backups"
+    path: "mysql-backend"
+  "push_whitehall_integration_daily":
+    ensure: "present"
+    hour: "1"
+    minute: "45"
+    action: "push"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "whitehall_production"
+    temppath: "/tmp/whitehall_production"
+    url: "govuk-integration-database-backups"
+    path: "mysql-backend"
