--- a/hieradata_aws/class/training/db_admin.yaml
+++ b/hieradata_aws/class/training/db_admin.yaml
@@ -21,7 +21,7 @@ govuk_env_sync::tasks:
     temppath: "/tmp/content_data_admin_integration_pull"
     url: "govuk-integration-database-backups"
     path: "postgresql-backend"
-  "pull_local-links-manager_training_daily":
+  "pull_local_links_manager_training_daily":
     ensure: "present"
     hour: "4"
     minute: "15"
@@ -43,3 +43,201 @@ govuk_env_sync::tasks:
     temppath: "/tmp/support_contacts_production"
     url: "govuk-integration-database-backups"
     path: "postgresql-backend"
+  "pull_content_register_training_daily":
+    ensure: "present"
+    hour: "3"
+    minute: "30"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "content-register_production"
+    temppath: "/tmp/content-register_production"
+    url: "govuk-integration-database-backups"
+    path: "postgresql-backend"
+  "pull_content_audit_tool_training_daily":
+    ensure: "present"
+    hour: "3"
+    minute: "30"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "content_audit_tool_production"
+    temppath: "/tmp/content_audit_tool_production"
+    url: "govuk-integration-database-backups"
+    path: "postgresql-backend"
+  "pull_content_publisher_training_daily":
+    ensure: "present"
+    hour: "3"
+    minute: "30"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "content_publisher_production"
+    temppath: "/tmp/content_publisher_production"
+    url: "govuk-integration-database-backups"
+    path: "postgresql-backend"
+  "pull_content_tagger_training_daily":
+    ensure: "present"
+    hour: "4"
+    minute: "30"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "content_tagger_production"
+    temppath: "/tmp/content_tagger_production"
+    url: "govuk-integration-database-backups"
+    path: "postgresql-backend"
+  "pull_email_alert_api_training_daily":
+    ensure: "present"
+    hour: "3"
+    minute: "30"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "email-alert-api_production"
+    temppath: "/tmp/email-alert-api_production"
+    url: "govuk-integration-database-backups"
+    path: "postgresql-backend"
+  "pull_email_alert_monitor_training_daily":
+    ensure: "present"
+    hour: "0"
+    minute: "10"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "email-alert-monitor_production"
+    temppath: "/tmp/email-alert-monitor_production"
+    url: "govuk-integration-database-backups"
+    path: "postgresql-backend"
+  "pull_organisations_publisher_training_daily":
+    ensure: "present"
+    hour: "2"
+    minute: "10"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "organisations-publisher_production"
+    temppath: "/tmp/organisations-publisher_production"
+    url: "govuk-integration-database-backups"
+    path: "postgresql-backend"
+  "pull_organisations_publisher_training_daily":
+    ensure: "present"
+    hour: "3"
+    minute: "30"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "organisations-publisher_production"
+    temppath: "/tmp/organisations-publisher_production"
+    url: "govuk-integration-database-backups"
+    path: "postgresql-backend"
+  "pull_service_manual_publisher_training_daily":
+    ensure: "present"
+    hour: "3"
+    minute: "35"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "service-manual-publisher_production"
+    temppath: "/tmp/service-manual-publisher_production"
+    url: "govuk-integration-database-backups"
+    path: "postgresql-backend"
+  "pull_publishing_api_training_daily":
+    ensure: "present"
+    hour: "5"
+    minute: "0"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "publishing_api_production"
+    temppath: "/tmp/publishing_api_production"
+    url: "govuk-integration-database-backups"
+    path: "postgresql-backend"
+  "pull_support_contacts_training_daily":
+    ensure: "present"
+    hour: "3"
+    minute: "30"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "support_contacts_production"
+    temppath: "/tmp/support_contacts_production"
+    url: "govuk-integration-database-backups"
+    path: "postgresql-backend"
+  "pull_collections_publisher_training_daily":
+    ensure: "present"
+    hour: "5"
+    minute: "30"
+    action: "pull"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "collections_publisher_production"
+    temppath: "/tmp/collections_publisher_production"
+    url: "govuk-integration-database-backups"
+    path: "mysql-backend"
+  "pull_contacts_training_daily":
+    ensure: "present"
+    hour: "3"
+    minute: "30"
+    action: "pull"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "contacts_production"
+    temppath: "/tmp/contacts_production"
+    url: "govuk-integration-database-backups"
+    path: "mysql-backend"
+  "pull_performance_schema_training_daily":
+    ensure: "present"
+    hour: "1"
+    minute: "30"
+    action: "pull"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "performance_schema"
+    temppath: "/tmp/performance_schema"
+    url: "govuk-integration-database-backups"
+    path: "mysql-backend"
+  "pull_release_training_daily":
+    ensure: "present"
+    hour: "2"
+    minute: "15"
+    action: "pull"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "release_production"
+    temppath: "/tmp/release_production"
+    url: "govuk-integration-database-backups"
+    path: "mysql-backend"
+  "pull_search_admin_training_daily":
+    ensure: "present"
+    hour: "1"
+    minute: "45"
+    action: "pull"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "search_admin_production"
+    temppath: "/tmp/search_admin_production"
+    url: "govuk-integration-database-backups"
+    path: "mysql-backend"
+  "pull_signon_training_daily":
+    ensure: "present"
+    hour: "2"
+    minute: "15"
+    action: "pull"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "signon_production"
+    temppath: "/tmp/signon_production"
+    url: "govuk-integration-database-backups"
+    path: "mysql-backend"
+  "pull_whitehall_training_daily":
+    ensure: "present"
+    hour: "3"
+    minute: "45"
+    action: "pull"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "whitehall_production"
+    temppath: "/tmp/whitehall_production"
+    url: "govuk-integration-database-backups"
+    path: "mysql-backend"
