--- a/hieradata_aws/class/staging/jenkins.yaml
+++ b/hieradata_aws/class/staging/jenkins.yaml
@@ -25,8 +25,9 @@ govuk_jenkins::job_builder::jobs:
   - govuk_jenkins::jobs::smokey
   - govuk_jenkins::jobs::smokey_deploy
   - govuk_jenkins::jobs::data_sync
-  - govuk_jenkins::jobs::transition_load_all_data_redirect
-  - govuk_jenkins::jobs::transition_load_site_config_redirect
+  - govuk_jenkins::jobs::transition_import_dns
+  - govuk_jenkins::jobs::transition_import_hits
+  - govuk_jenkins::jobs::transition_load_site_config
   - govuk_jenkins::jobs::bouncer_cdn_redirect
 
 
