Add Training Environment Asset Domain to Router
This change allows assets to be served in the Training Environment.

--- a/hieradata_aws/training.yaml
+++ b/hieradata_aws/training.yaml
@@ -171,6 +171,9 @@ postfix::smarthost:
 router::nginx::check_requests_warning: '@0.5'
 router::nginx::check_requests_critical: '@0.25'
 
+router::assets_origin::vhost_aliases:
+  - 'assets.training.govuk.digital'
+
 users::usernames:
   - agnieszkadufrat
   - alangabbianelli
