Add bearer token for pub-api in email-alert-api
Related to: https://github.com/alphagov/govuk-secrets/pull/734

--- a/hieradata/development_credentials.yaml
+++ b/hieradata/development_credentials.yaml
@@ -227,6 +227,7 @@ govuk::apps::content_tagger::email_alert_api_bearer_token: 'oauth-bearer-token-e
 govuk::apps::content_tagger::publishing_api_bearer_token: 'oauth-bearer-token-publishing-api'
 govuk::apps::email_alert_api::oauth_id: 'oauth-email-alert-api'
 govuk::apps::email_alert_api::oauth_secret: 'secret'
+govuk::apps::email_alert_api::publishing_api_bearer_token: 'oauth-bearer-token-publishing-api'
 govuk::apps::email_alert_frontend::email_alert_api_bearer_token: 'oauth-bearer-token-email-alert-api'
 govuk::apps::email_alert_frontend::publishing_api_bearer_token: 'oauth-bearer-token-publishing-api'
 govuk::apps::finder_frontend::email_alert_api_bearer_token: 'oauth-bearer-token-email-alert-api'
