--- a/hieradata_aws/class/training/db_admin.yaml
+++ b/hieradata_aws/class/training/db_admin.yaml
@@ -143,7 +143,7 @@ govuk_env_sync::tasks:
     url: "govuk-integration-database-backups"
     path: "postgresql-backend"
   "pull_publishing_api_training_daily":
-    ensure: "present"
+    ensure: "disabled"
     hour: "5"
     minute: "0"
     action: "pull"
@@ -220,7 +220,7 @@ govuk_env_sync::tasks:
     url: "govuk-integration-database-backups"
     path: "mysql-backend"
   "pull_signon_training_daily":
-    ensure: "present"
+    ensure: "disabled"
     hour: "2"
     minute: "15"
     action: "pull"
@@ -231,7 +231,7 @@ govuk_env_sync::tasks:
     url: "govuk-integration-database-backups"
     path: "mysql-backend"
   "pull_whitehall_training_daily":
-    ensure: "present"
+    ensure: "disabled"
     hour: "3"
     minute: "45"
     action: "pull"
