--- a/hieradata_aws/class/production/jenkins.yaml
+++ b/hieradata_aws/class/production/jenkins.yaml
@@ -38,3 +38,4 @@ govuk_jenkins::job_builder::jobs:
 govuk_jenkins::jobs::deploy_cdn::enable_slack_notifications: false
 govuk_jenkins::jobs::deploy_puppet::enable_slack_notifications: false
 govuk_jenkins::jobs::smokey::enable_slack_notifications: false
+govuk_jenkins::jobs::transition_import_hits::s3_bucket: govuk-production-transition-fastly-logs
