--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -787,6 +787,7 @@ govuk_ci::master::pipeline_jobs:
   govuk-dependencies: {}
   govuk-developer-docs: {}
   govuk_document_types: {}
+  govuk-docker: {}
   govuk-guix: {}
   govuk-jenkinslib: {}
   govuk-lint: {}
