add puppet node & class for Gatling
Add the necessary code to deploy gatling on AWS

--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -811,6 +811,8 @@ govuk::node::s_content_data_api_db_admin::apt_mirror_hostname: "%{hiera('apt_mir
 
 govuk::node::s_email_alert_api_db_admin::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
 
+govuk::node::s_gatling::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
+
 govuk::node::s_graphite::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
 
 govuk::node::s_licensify_lb::backend_app_servers:
