Enable X-Frame-Options everywhere
This commit makes the `X-Frame-Options` HTTP header be set everywhere by default rather than just for publishing apps. This will prevent GOV.UK pages being framed by other sites and will reduce the possibility of clickjacking attempts in browsers that respect the header.

--- a/modules/nginx/templates/proxy-vhost.conf
+++ b/modules/nginx/templates/proxy-vhost.conf
@@ -92,8 +92,10 @@ server {
   access_log <%= @logpath %>/<%= @json_access_log %> json_event;
   error_log <%= @logpath %>/<%= @error_log %>;
 
-  <%- if @deny_framing -%>
+  <%- if @frame_options == "deny" -%>
   add_header X-Frame-Options DENY;
+  <%- elsif @frame_options == "sameorigin" -%>
+  add_header X-Frame-Options SAMEORIGIN;
   <%- end -%>
   <%- if scope.lookupvar('::aws_migration') and @deny_crawlers -%>
   location = /robots.txt {
