adds user chrisfarmiloe
adds user and public key for Chris Farmiloe

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -224,6 +224,7 @@ users::usernames:
   - brucebolt
   - camilledescartes
   - christopherbaines
+  - chrisfarmiloe
   - deanwilson
   - deborahchua
   - dilwoarhussain
