--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -351,6 +351,7 @@ users::usernames:
   - camilledescartes
   - christopherashton
   - christopherbaines
+  - chrisfarmiloe
   - deanwilson
   - deborahchua
   - dilwoarhussain
