Add user chrisbanks and public key.

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -223,6 +223,7 @@ users::usernames:
   - bevanloon
   - brucebolt
   - camilledescartes
+  - chrisbanks
   - christopherbaines
   - chrisfarmiloe
   - deanwilson
