--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -349,6 +349,7 @@ users::usernames:
   - bevanloon
   - brucebolt
   - camilledescartes
+  - chrisbanks
   - christopherashton
   - christopherbaines
   - chrisfarmiloe
