adds chrisfarmiloe to training env

--- a/hieradata_aws/training.yaml
+++ b/hieradata_aws/training.yaml
@@ -187,6 +187,7 @@ users::usernames:
   - camilledescartes
   - christopherashton
   - christopherbaines
+  - chrisfarmiloe
   - deanwilson
   - deborahchua
   - dilwoarhussain
