Add callum knights manifest to govuk-puppet

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -222,6 +222,7 @@ users::usernames:
   - benthorner
   - bevanloon
   - brucebolt
+  - callumknights
   - camilledescartes
   - chrisbanks
   - christopherbaines
