--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -348,6 +348,7 @@ users::usernames:
   - benthorner
   - bevanloon
   - brucebolt
+  - callumknights
   - camilledescartes
   - chrisbanks
   - christopherashton
