do not set elasticsearch_b_uri for training environment
training environment does not have elasticsearch6, so this should be setup. Hence, this requires a code modification to ensure that when the `govuk::apps::search_api::elasticsearch_b_uri` param is undef, puppet will not set this param

--- a/hieradata_aws/class/training/search.yaml
+++ b/hieradata_aws/class/training/search.yaml
@@ -18,3 +18,5 @@ logrotate::conf::days_to_keep: 7
 nginx::logging::days_to_keep: 7
 
 govuk_search::prune::es_repo: "govuk-training"
+
+govuk::apps::search_api::elasticsearch_b_uri: "null"
