--- a/hieradata/development_credentials.yaml
+++ b/hieradata/development_credentials.yaml
@@ -221,6 +221,7 @@ govuk::apps::content_data_admin::google_tag_manager_preview: 'env-62'
 govuk::apps::content_data_admin::google_tag_manager_id: 'GTM-NZG8SF2'
 govuk::apps::content_publisher::asset_manager_bearer_token: 'oauth-bearer-token-asset-manager'
 govuk::apps::content_publisher::publishing_api_bearer_token: 'oauth-bearer-token-publishing-api'
+govuk::apps::content_publisher::whitehall_bearer_token: 'oauth-bearer-token-whitehall'
 govuk::apps::content_tagger::oauth_id: 'oauth-content-tagger'
 govuk::apps::content_tagger::oauth_secret: 'secret'
 govuk::apps::content_tagger::email_alert_api_bearer_token: 'oauth-bearer-token-email-alert-api'
