Add an application manifest for the govuk-content-schemas
This adds an Icinga check to flag when the govuk-content-schemas
doesn't exist on a machine, as well as feeding in to the Deploy Node
Apps Jenkins job, so that the govuk-content-schemas is deployed when
nodes are rebuilt.

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -24,6 +24,7 @@ node_class: &node_class
       - content-audit-tool
       - content-publisher
       - content-tagger
+      - govuk-content-schemas
       - hmrc-manuals-api
       - imminence
       - kibana
@@ -101,6 +102,7 @@ node_class: &node_class
       - govuk-crawler-worker
   publishing_api:
     apps:
+      - govuk-content-schemas
       - publishing-api
   router_backend:
     apps:
