--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -25,6 +25,7 @@ node_class: &node_class
       - content-data-api
       - content-publisher
       - content-tagger
+      - govuk-content-schemas
       - hmrc-manuals-api
       - imminence
       - kibana
@@ -106,6 +107,7 @@ node_class: &node_class
       - govuk_crawler_worker
   publishing_api:
     apps:
+      - govuk-content-schemas
       - publishing-api
   router_backend:
     apps:
