--- a/hieradata_aws/class/training/whitehall.yaml
+++ b/hieradata_aws/class/training/whitehall.yaml
@@ -1,3 +1,3 @@
 ---
-govuk::apps::whitehall::unicorn_worker_processes: "1"
+govuk::apps::whitehall::backend_unicorn_worker_processes: 1
 govuk::apps::whitehall::procfile_worker_process_count: 1
