--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -1103,6 +1103,8 @@ monitoring::contacts::slack_icinga_status_cgi_url: "https://alert.%{::aws_enviro
 monitoring::contacts::slack_icinga_extinfo_cgi_url: "https://alert.%{::aws_environment}.govuk.digital/cgi-bin/icinga/status.cgi"
 
 monitoring::checks::smokey::features:
+  check_assets:
+    feature: assets
   check_bouncer:
     feature: bouncer
   check_cache:
@@ -1111,8 +1113,14 @@ monitoring::checks::smokey::features:
     feature: calendars
   check_contacts:
     feature: contacts
+  check_content_data_admin:
+    feature: content_data_admin
+  check_data_gov_uk:
+    feature: data_gov_uk
   check_draft_environment:
     feature: draft_environment
+  check_email_signup:
+    feature: email_signup
   check_frontend:
     feature: frontend
   check_government_frontend:
