--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -764,6 +764,11 @@ govuk_cdnlogs::service_port_map:
 
 govuk_ci::master::pipeline_jobs:
   <<: *deployable_applications
+  # Applications migrated to AWS
+  cache-clearing-service: {}
+  content-data-admin: {}
+  content-data-api: {}
+  # Other repositories
   asset_bom_removal-rails: {}
   backdrop-transactions-explorer-collector: {}
   bulk-merger: {}
