--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -1123,6 +1123,8 @@ monitoring::checks::smokey::features:
     feature: draft_environment
   check_email_signup:
     feature: email_signup
+  check_feedback:
+    feature: feedback
   check_frontend:
     feature: frontend
   check_government_frontend:
