add user suganyasivaskantharajah

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -260,6 +260,7 @@ users::usernames:
   - simonhughesdon
   - stephengrier
   - stephenharker
+  - suganyasivaskantharajah
   - thomasleese
   - tijmenbrommet
   - timblair
