--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -455,6 +455,7 @@ users::usernames:
   - simonhughesdon
   - stephengrier
   - stephenharker
+  - suganyasivaskantharajah
   - thomasleese
   - tijmenbrommet
   - timblair
