Add matthewgregory user

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -246,6 +246,7 @@ users::usernames:
   - kevindew
   - leenagupte
   - mahmudhussain
+  - matthewgregory
   - maxlehmann
   - michaelswalker
   - murilodalri
