blacklist tagged branches of licensify created during environment deployment
Co-Authored-By: Chris <sengi@users.noreply.github.com>

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -813,7 +813,17 @@ govuk_ci::master::pipeline_jobs:
     branches_to_exclude:
       - 'release*'
       - 'deployed-to-integration'
+      - 'licensify-deployed-to-integration'
+      - 'licensify-admin-deployed-to-integration'
+      - 'licensify-feed-deployed-to-integration'
       - 'deployed-to-staging'
+      - 'licensify-deployed-to-staging'
+      - 'licensify-admin-deployed-to-staging'
+      - 'licensify-feed-deployed-to-staging'
+      - 'deployed-to-production'
+      - 'licensify-deployed-to-production'
+      - 'licensify-admin-deployed-to-production'
+      - 'licensify-feed-deployed-to-production'
       - 'integration'
       - 'staging'
       - 'production'
