Reactivate router sync for integration
Previously we deactivated sync for the router in integration and seem to
have forgotten to turn it back on. Since most apps simply override any
existing routes, this has mostly gone unnoticed, but may account for
some weirdnesses with 404 pages and such. This reactivates the push/pull
flow from staging to integration.

Reference: https://github.com/alphagov/govuk-puppet/blob/145bd8c1cbe7364b191907914050261c5bbe9860/hieradata_aws/class/integration/router_backend.yaml

--- a/hieradata_aws/class/staging/router_backend.yaml
+++ b/hieradata_aws/class/staging/router_backend.yaml
@@ -32,3 +32,36 @@ govuk_env_sync::tasks:
     temppath: "/tmp/.dumps"
     url: "govuk-staging-database-backups"
     path: "mongo-router"
+  "push_router_daily":
+    ensure: "present"
+    hour: "2"
+    minute: "24"
+    action: "push"
+    dbms: "mongo"
+    storagebackend: "s3"
+    database: "router"
+    temppath: "/tmp/.dumps"
+    url: "govuk-staging-database-backups"
+    path: "mongo-router"
+  "push_draft_router_daily":
+    ensure: "present"
+    hour: "2"
+    minute: "45"
+    action: "push"
+    dbms: "mongo"
+    storagebackend: "s3"
+    database: "draft_router"
+    temppath: "/tmp/.dumps"
+    url: "govuk-staging-database-backups"
+    path: "mongo-router"
+  "push_authenticating_proxy_daily":
+    ensure: "present"
+    hour: "2"
+    minute: "45"
+    action: "push"
+    dbms: "mongo"
+    storagebackend: "s3"
+    database: "authenticating_proxy_production"
+    temppath: "/tmp/.dumps"
+    url: "govuk-staging-database-backups"
+    path: "mongo-router"
