Deploy publishing-api in AWS Staging

--- a/hieradata_aws/staging.yaml
+++ b/hieradata_aws/staging.yaml
@@ -85,6 +85,10 @@ node_class: &node_class
   mirrorer:
     apps:
       - govuk_crawler_worker
+  publishing_api:
+    apps:
+      - govuk-content-schemas
+      - publishing-api
   router_backend:
     apps:
       - router-api
