Add Jennifer Allum to email whitelist

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -389,6 +389,7 @@ govuk::apps::email_alert_api::email_address_override_whitelist:
   - complaint@simulator.amazonses.com
   - deborah.chua@digital.cabinet-office.gov.uk
   - edward.kerry@digital.cabinet-office.gov.uk
+  - jennifer.allum@digital.cabinet-office.gov.uk
   - kevin.dew@digital.cabinet-office.gov.uk
   - leanne.cummings@digital.cabinet-office.gov.uk
   - steve.messer@digital.cabinet-office.gov.uk
