Add Conor Delahunty to email whitelist

--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -474,6 +474,7 @@ govuk::apps::email_alert_api::email_address_override_whitelist:
   - andy.maidment@digital.cabinet-office.gov.uk
   - bevan.loon@digital.cabinet-office.gov.uk
   - complaint@simulator.amazonses.com
+  - conor.delahunty@digital.cabinet-office.gov.uk
   - deborah.chua@digital.cabinet-office.gov.uk
   - edward.kerry@digital.cabinet-office.gov.uk
   - jennifer.allum@digital.cabinet-office.gov.uk
