Revert "Remove pgbouncer code"

--- a/hieradata/development.yaml
+++ b/hieradata/development.yaml
@@ -368,6 +368,8 @@ nginx_enable_ssl: false
 postgresql_api_slave_addresses_live: '127.0.0.1/32'
 postgresql_slave_addresses_live: '127.0.0.1/32'
 
+govuk_pgbouncer::include_vagrant_user: true
+
 puppet::use_puppetmaster: false
 puppet::cronjob::enabled: false
 
