Add ckan to list of apps deployable to integration
This should stop the jenkins job erroring on ci integration

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -979,6 +979,8 @@ govuk_jenkins::jobs::integration_deploy::applications:
   cache-clearing-service: {}
   calculators: {}
   calendars: {}
+  ckan:
+    repository: 'ckanext-datagovuk'
   collections: {}
   content-store: {}
   email-alert-frontend: {}
