Disable production -> integration data sync
govuk_env_sync:
- content-store (live)
- content-store (draft)
- router (live)
- router (draft)
- search (es5)
- search (es6)

env_sync_and_backup:
- whitehall mysql
- data sync

--- a/hieradata_aws/class/integration/search.yaml
+++ b/hieradata_aws/class/integration/search.yaml
@@ -1,6 +1,6 @@
 govuk_env_sync::tasks:
   "pull_es_everything_daily":
-    ensure: "present"
+    ensure: "absent"
     hour: "3"
     minute: "24"
     action: "pull"
@@ -22,7 +22,7 @@ govuk_env_sync::tasks:
     url: "govuk-integration"
     path: "elasticsearch5"
   "pull_es6_daily":
-    ensure: "present"
+    ensure: "absent"
     hour: "3"
     minute: "24"
     action: "pull"
