fix licensing staging config hiera

--- a/hieradata_aws/staging.yaml
+++ b/hieradata_aws/staging.yaml
@@ -237,8 +237,8 @@ licensify::apps::configfile::elms_max_app_process_attempt_count: '6'
 licensify::apps::configfile::access_token_url: 'https://signon.staging.publishing.service.gov.uk/oauth/access_token'
 licensify::apps::configfile::authorization_url: 'https://signon.staging.publishing.service.gov.uk/oauth/authorize'
 licensify::apps::configfile::user_details_url: 'https://signon.staging.publishing.service.gov.uk/user.json'
-licensify::apps::configfile::google_analytics_account_admin: 'UA-34519962-2'
-licensify::apps::configfile::google_analytics_domain_admin: 'staging.publishing.service.gov.uk'
+licensify::apps::configfile::google_analytics_account_admin: 'UA-34530684-2'
+licensify::apps::configfile::google_analytics_domain_admin: '.www-origin.staging.publishing.service.gov.uk'
 licensify::apps::configfile::google_analytics_account_frontend: 'UA-26179049-1'
 licensify::apps::configfile::google_analytics_domain_frontend: 'staging.publishing.service.gov.uk'
 licensify::apps::configfile::no_reply_mail_address: 'noreply-licensing+staging@digital.cabinet-office.gov.uk'
