Add disabled Licensing pull for prod govuk_env_sync
- We are re-platforming Licensing from UKC to AWS
- This Puppet code will put the required configuration in place to
import all Licensing data into DocumentDB
- We use status 'disabled' as these will only be executed manually on
the day of the switchover
- This should be reverted as part of the post-switchover work documented
in https://trello.com/c/rAznS2Fp/2815-post-production-licensify-migration

--- a/hieradata_aws/class/production/db_admin.yaml
+++ b/hieradata_aws/class/production/db_admin.yaml
@@ -54,3 +54,36 @@ govuk_env_sync::tasks:
     temppath: "/tmp/"
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
+  "pull_licensify_production":
+    ensure: "disabled"
+    hour: "1"
+    minute: "0"
+    action: "pull"
+    dbms: "mongo"
+    storagebackend: "s3"
+    database: "licensify"
+    temppath: "/var/lib/mongodb/.dumps"
+    url: "govuk-production-database-backups"
+    path: "mongo-licensing"
+  "pull_licensify_refdata_production":
+    ensure: "disabled"
+    hour: "2"
+    minute: "30"
+    action: "push"
+    dbms: "mongo"
+    storagebackend: "s3"
+    database: "licensify-refdata"
+    temppath: "/var/lib/mongodb/.dumps"
+    url: "govuk-production-database-backups"
+    path: "mongo-licensing"
+  "pull_licensify_audit_production":
+    ensure: "disabled"
+    hour: "2"
+    minute: "40"
+    action: "pull"
+    dbms: "mongo"
+    storagebackend: "s3"
+    database: "licensify-audit"
+    temppath: "/var/lib/mongodb/.dumps"
+    url: "govuk-production-database-backups"
+    path: "mongo-licensing"
