Add user ericyoung

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -229,6 +229,7 @@ users::usernames:
   - dilwoarhussain
   - edwardkerry
   - emmabeynon
+  - ericyoung
   - erinrajstaniland
   - felisialoukou
   - fredericfrancois
