--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -460,6 +460,7 @@ users::usernames:
   - dilwoarhussain
   - edwardkerry
   - emmabeynon
+  - ericyoung
   - erinrajstaniland
   - felisialoukou
   - fredericfrancois
