add: huw to hieradata and hieradata_aws

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -233,6 +233,7 @@ users::usernames:
   - erinrajstaniland
   - felisialoukou
   - fredericfrancois
+  - huwdiprose
   - ianjames
   - jessicajones
   - jonathanhallam
