Add Issy as a user in Puppet and to integration/training envs

--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -465,6 +465,7 @@ users::usernames:
   - felisialoukou
   - fredericfrancois
   - ianjames
+  - isabelllong
   - jessicajones
   - jonathanhallam
   - jonathonshire
