--- a/hieradata_aws/training.yaml
+++ b/hieradata_aws/training.yaml
@@ -196,6 +196,7 @@ users::usernames:
   - felisialoukou
   - fredericfrancois
   - ianjames
+  - isabelllong
   - jessicajones
   - jonathanhallam
   - joskoetsier
