--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -234,6 +234,7 @@ users::usernames:
   - felisialoukou
   - fredericfrancois
   - ianjames
+  - isabelllong
   - jessicajones
   - jonathanhallam
   - jonathonshire
