Add Laurent to integration and CI

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -243,6 +243,7 @@ users::usernames:
   - kelvingan
   - kentsang
   - kevindew
+  - laurentcurau
   - leenagupte
   - mahmudhussain
   - matthewgregory
