--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -474,6 +474,7 @@ users::usernames:
   - kelvingan
   - kentsang
   - kevindew
+  - laurentcurau
   - leenagupte
   - mahmudhussain
   - matthewgregory
