Add User: tomwhitwell

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -258,6 +258,7 @@ users::usernames:
   - suganyasivaskantharajah
   - thomasleese
   - timblair
+  - tomwhitwell
   - vanitabarrett
   - vitaliemogoreanu
   - williamfranklin
