--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -494,6 +494,7 @@ users::usernames:
   - suganyasivaskantharajah
   - thomasleese
   - timblair
+  - tomwhitwell
   - vanitabarrett
   - vitaliemogoreanu
   - williamfranklin
