Add Duncan to integration and CI

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -228,6 +228,7 @@ users::usernames:
   - deanwilson
   - deborahchua
   - dilwoarhussain
+  - duncangarmonsway
   - edwardkerry
   - emmabeynon
   - ericyoung
