--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -456,6 +456,7 @@ users::usernames:
   - deanwilson
   - deborahchua
   - dilwoarhussain
+  - duncangarmonsway
   - edwardkerry
   - emmabeynon
   - ericyoung
