Adding Stephen Ford

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -234,6 +234,7 @@ users::usernames:
   - sebastianschmieschek
   - sebastianszypowicz
   - simonhughesdon
+  - stephenford
   - stephengrier
   - stephenharker
   - suganyasivaskantharajah
