--- a/hieradata_aws/training.yaml
+++ b/hieradata_aws/training.yaml
@@ -202,6 +202,7 @@ users::usernames:
   - sebastianschmieschek
   - sebastianszypowicz
   - simonhughesdon
+  - stephenford
   - stephengrier
   - stephenharker
   - thomasleese
