Add Sarah Young to puppet `users`
* Sarah has now joined GOV.UK and needs to be added as a user to Puppet.

fix: missing trailing comma

* Puppet linter fails when there is no trailing comma on the ssh_key declaration.

--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -484,6 +484,7 @@ users::usernames:
   - richardmorton
   - rochtrinque
   - samuelculley
+  - sarahyoung
   - seanrankine
   - sebastianschmieschek
   - sebastianszypowicz
