--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -232,6 +232,7 @@ users::usernames:
   - richardmorton
   - rochtrinque
   - samuelculley
+  - sarahyoung
   - seanrankine
   - sebastianschmieschek
   - sebastianszypowicz
