--- a/hieradata_aws/training.yaml
+++ b/hieradata_aws/training.yaml
@@ -199,6 +199,7 @@ users::usernames:
   - peterhartshorn
   - richardmorton
   - rochtrinque
+  - sarahyoung
   - seanrankine
   - sebastianschmieschek
   - sebastianszypowicz
