cleaning up transition db backups
In integration and staging, we disabled the `rds postgres to s3` job on the tansition_db_admin box because this will be done by govuk_env_sync. We will do the same in production if all dependencies can be removed without issues.

--- a/hieradata_aws/class/integration/transition_db_admin.yaml
+++ b/hieradata_aws/class/integration/transition_db_admin.yaml
@@ -1,6 +1,6 @@
 govuk_env_sync::tasks:
   "push_transition_integration_daily":
-    ensure: "present"
+    ensure: "absent"
     hour: "3"
     minute: "0"
     action: "push"
@@ -9,4 +9,15 @@ govuk_env_sync::tasks:
     database: "transition_production"
     temppath: "/tmp/transition_production"
     url: "govuk-integration-database-backups"
+    path: "transition-postgresql"
+  "pull_transition_integration_daily":
+    ensure: "present"
+    hour: "6"
+    minute: "0"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "transition_production"
+    temppath: "/tmp/transition_production"
+    url: "govuk-staging-database-backups"
     path: "transition-postgresql"
