--- a/hieradata_aws/class/staging/transition_db_admin.yaml
+++ b/hieradata_aws/class/staging/transition_db_admin.yaml
@@ -10,3 +10,14 @@ govuk_env_sync::tasks:
     temppath: "/tmp/transition_production"
     url: "govuk-production-database-backups"
     path: "transition-postgresql"
+  "push_transition_production_daily":
+    ensure: "present"
+    hour: "5"
+    minute: "30"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "transition_production"
+    temppath: "/tmp/transition_production"
+    url: "govuk-staging-database-backups"
+    path: "transition-postgresql"
